--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "googlebooks-app",
+  "name": "booksearch-app",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
@@ -9,6 +9,10 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
   },
+  "engines": {
+    "node": "18.12.1",
+    "npm": "8.19.2"
+  },
   "keywords": [
     "heroku"
   ],
@@ -16,5 +20,11 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "apollo-server-express": "^2.25.3",
+    "express": "^4.17.2",
+    "graphql": "^15.8.0",
+    "react": "^18.2.0"
   }
 }
