--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "node": "16.0.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
