--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "booksearch-app",
+  "name": "got-books",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build"
@@ -12,9 +12,7 @@
   "engines": {
     "node": "16.0.0"
   },
-  "keywords": [
-    "heroku"
-  ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -23,7 +21,6 @@
   "dependencies": {
     "apollo-server-express": "^2.25.3",
     "express": "^4.17.2",
-    "graphql": "^15.8.0",
-    "react": "^18.2.0"
+    "graphql": "^15.8.0"
   }
 }
